--- a/apps/aresadb-studio/package.json
+++ b/apps/aresadb-studio/package.json
@@ -11,9 +11,6 @@
     "load-data": "npx tsx scripts/load-demo-data.ts"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.0.0",
@@ -24,6 +21,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.378.0",
+    "next": "^16.0.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -40,4 +40,3 @@
     "typescript": "^5.4.5"
   }
 }
-
