--- a/apps/aresalab/package.json
+++ b/apps/aresalab/package.json
@@ -25,7 +25,7 @@
         "katex": "^0.16.25",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.300.0",
-        "next": "14.2.25",
+        "next": "^16.0.7",
         "next-mdx-remote": "^5.0.0",
         "postcss": "^8",
         "react": "^18",
