--- a/apps/fire-safety/package.json
+++ b/apps/fire-safety/package.json
@@ -27,7 +27,7 @@
         "katex": "^0.16.22",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.300.0",
-        "next": "14.2.25",
+        "next": "^16.0.7",
         "papaparse": "^5.5.3",
         "postcss": "^8",
         "react": "^18",
